overflow prevent margin collapse

--- a/css/style.css
+++ b/css/style.css
@@ -75,14 +75,16 @@ html {
     text-shadow: 0 -1px 0 black, 0 1px 0 white;
     width: 100%;
     height: 100%; /* keeps body min-height */
-    padding: 1px 0 0; /*prevent margin collapse*/
+    /*padding: 1px 0 0; prevent margin collapse*/
+    overflow: auto;
     background: url(../images/Cross_bg.png) repeat 0 0; 
   }
     .container { 
       width: 100%; 
       min-height: 100%; /* keeps body min-height */
       *height: 100%;
-      padding: 1px 0 0; /*prevent margin collapse*/
+      /*padding: 1px 0 0; prevent margin collapse*/
+      overflow: auto;
     }
       header { 
         border-bottom: 1px solid #D7C2CC; 
